# ExpenseParser

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: security-auditor.md
src/gnomon_expenses/: __init__.py  __main__.py  cli.py  config.py
src/gnomon_expenses/extraction/: ai_extract.py  ocr.py  pdf_text.py  pipeline.py
src/gnomon_expenses/extraction/parsers/: anomaly.py  anthropic.py  base.py  elevenlabs.py  generic.py  hetzner.py  infomaniak.py  namecheap.py  twilio.py
src/gnomon_expenses/models/: categories.py  expense.py  vat.py
src/gnomon_expenses/reporting/: reports.py
src/gnomon_expenses/storage/: adapter.py  local_json.py
src/gnomon_expenses/watcher/: folder_watcher.py
