[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gnomon-expenses"
version = "0.1.0"
description = "Automated expense tracking for Swiss GmbH — PDF extraction, KMU categorization, MWST reporting"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pdfplumber>=0.11",
    "watchdog>=4.0",
    "rich>=13.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3", "Pillow>=10.0", "pdf2image>=1.16"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
gnomon-expenses = "gnomon_expenses.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/gnomon_expenses"]

[tool.pytest.ini_options]
testpaths = ["tests"]
